Pequenas mudanças em html/CSS

--- a/src/modulo-04-C#/Locadora/LocadoraWEB/Views/Index/Index.cshtml
+++ b/src/modulo-04-C#/Locadora/LocadoraWEB/Views/Index/Index.cshtml
@@ -14,11 +14,12 @@
     <header>
         <div class="cabecalho">
             <p class="text"><font color="white">Locadora SenuN</font></p>
-        </div>
-        <img src="~/Content/Image/image.jpg" class="centrar" />
-        <input type="button" class="botao" value="DONTCLICKONME" onclick="location.href='@Url.Action("JogosDisponiveis", "Relatorio")'"/> 
+        </div> 
     </header>
-    
+    <section>
+        <img src="~/Content/Image/image.jpg" class="centrar" />
+        <input type="button" class="botao" value="DONTCLICKONME" onclick="location.href='@Url.Action("JogosDisponiveis", "Relatorio")'" />
+    </section>
     
 </body>
 </html>
