--- a/src/modulo-04-C#/Locadora/LocadoraWEB/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora/LocadoraWEB/Views/Relatorio/JogosDisponiveis.cshtml
@@ -22,8 +22,8 @@
             <p class="text"><font color="white">Locadora SenuN</font></p>
         </div>
     </header>
-    <div>
-    <h3 class="mar">JOGOS</h3>
+    <section>
+        <h3 class="mar">JOGOS</h3>
         <ul class="jogos">
             @foreach (var item in Model.Jogos)
             {
@@ -37,7 +37,10 @@
             <p>Jogo mais barato @Model.JogoMaisBarato</p>
             <p>Valor Medio de Jogos @Model.ValorMedio</p>
         </div>
-        </div>
+    </section>
+
+
+        
 
 
 
