--- a/src/modulo-04-C#/Locadora/LocadoraWEB/Content/CSS/StyleSheet1.css
+++ b/src/modulo-04-C#/Locadora/LocadoraWEB/Content/CSS/StyleSheet1.css
@@ -41,12 +41,13 @@ transition: 0.5s ease-in;
 }
 
 .mar{
-    margin-top:15px;
-    margin-left:35px;
+    margin-top:18px;
+    margin-left:37px;
 }
 
 .jogos{
     margin: -10px 0 0 0;
+    position:relative;
 }
 
 .Final-Jogos{
@@ -54,4 +55,5 @@ transition: 0.5s ease-in;
     margin-right:200px;
     margin-top:-528px;
     margin-right:750px;
+    line-height:5px;
 }
