--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
     ViewBag.Title = "Página Inicial";
 }
-
-<h2>Locadora CWI Crescer</h2>
-
-<a href="/Relatorio/JogosDisponiveis">Jogos Disponíveis</a>
+<header>
+    <h2>Locadora CWI Crescer</h2>
+    <a href="/Relatorio/JogosDisponiveis">Jogos Disponíveis</a>
+</header>
+<img style="margin:0 auto " class="img-responsive"  src="~/Content/img/molejo.jpg" />
+<h3 class="text-center textcolor">Bom é ser feliz com o molejão!</h3>
 
