'Trabalhando' html/css

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Página Inicial";
 }
 <header>
-    <h2>Locadora CWI Crescer</h2>
+    <h2 class="text-center">Locadora CWI Crescer</h2>
     <a href="/Relatorio/JogosDisponiveis">Jogos Disponíveis</a>
 </header>
-<img style="margin:0 auto " class="img-responsive"  src="~/Content/img/molejo.jpg" />
-<h3 class="text-center textcolor">Bom é ser feliz com o molejão!</h3>
+<img style="margin:0 auto " class="img-responsive"  src="~/Content/img/Chars.png"/>
+<h2 class="text-center textcolor">SenuN Games</h2>
 
