Preparando para procimo exercicio

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Descricao/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Descricao/Detalhes.cshtml
@@ -5,6 +5,25 @@
 
 
 <h2 class="text-center">@Model.Nome</h2>
+<table class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr>
+            <th style="width:40%">Jogo</th>
+            <th style="width:30%">Categoria</th>
+            <th style="width:30%">Descricao</th>
+            <th style="width:30%">Imagem</th>
+            <th style="width:30%">Video</th>
+        </tr>
+    </thead>
+    <tr>
+        <td>@Model.Descricao</td>
+        <td>@Model.Categoria</td>
+        <td>@Model.Descricao</td>
+        <td>@Model.Imagem</td>
+        <td>@Model.Video</td>
+    </tr>
+
+</table>
 <div class="text-center">
     @Model.Descricao
     @Model.Categoria
