Refatoração de Jogo

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -3,7 +3,12 @@
 }
 <header>
     <h2 class="text-center">Locadora CWI Crescer</h2>
-    @Html.ActionLink("Lista de Jogos","JogosDisponiveis","Relatorio")
-</header>
+    <form action="@Url.Action("JogosDisponiveis", "Jogo")" method="get">
+        <label for="nome">Pesquisa por nome: </label>
+        <input type="text" name="nome" value="" />
+
+        <input type="submit" value="Pesquisar" />
+    </form>
+ </header>
 <img style="margin:0 auto " class="img-responsive" src="@Url.Content("~/Content/img/Chars.png")" />
 <h2 class="text-center textcolor">SenuN Games</h2>
