--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -11,16 +11,12 @@
             <th style="width:40%">Jogo</th>
             <th style="width:30%">Categoria</th>
             <th style="width:30%">Descricao</th>
-            <th style="width:30%">Imagem</th>
-            <th style="width:30%">Video</th>
         </tr>
     </thead>
     <tr>
-        <td>@Model.Descricao</td>
+        <td>@Model.Nome</td>
         <td>@Model.Categoria</td>
         <td>@Model.Descricao</td>
-        <td>@Model.Imagem</td>
-        <td>@Model.Video</td>
     </tr>
-
 </table>
+<img src=Model.Imagem />
