--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
@@ -3,8 +3,14 @@
     ViewBag.Title = "Jogos Disponíveis";
 }
 
-<h2>Jogos disponíveis para locação</h2>
-
+@Html.ActionLink("Cricar Jogo", "Criar", "Jogo"))
+@if (Model == null)
+{
+    <h2>Nenhum Jogo Encontrado</h2>
+}
+else
+{
+    <h2>Jogos disponíveis para locação</h2>
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr>
@@ -16,12 +22,17 @@
     </thead>
           
        @foreach (var item in Model.ListaJogos)
-        {
+       {
         <tr>
             <td>@item.Nome </td>
             <td>@item.Categoria</td>
             <td>@item.Preco</td>
-            <td>@Html.ActionLink("Descricao jogo","Detalhes","Descricao", new { id=item.ID},null)</td>
+            <td>@Html.ActionLink("Descricao jogo", "Detalhes", "Jogo", new { id = item.ID }, null)</td>
         </tr>
-        }
+       }
 </table>
+
+<p> Total de jogos: @Model.TotalJogos</p>
+<p>Jogo mais caro: @Model.MaisCaro</p>
+<p>Jogo mais Barato: @Model.MaisBarato</p>
+}
