Feat -> implementado edição de jogos

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -15,7 +15,7 @@
     </thead>
     <tr>
         <td>@Model.Nome</td>
-        <td>@Model.Categoria</td>
+        <td>@Model.Categorias.ToString()</td>
         <td>@Model.Descricao</td>
     </tr>
 </table>
