--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <p>&copy; @DateTime.Now.Year - CWI Crescer</p>
         </footer>
     </div>
-
+    @RenderSection("Scripts", false)
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
