Adicionado criação de jogos

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
@@ -7,7 +7,7 @@
     @TempData["Mensagem"]
 </h2>
 
-@Html.ActionLink("Cricar Jogo", "Criar", "Jogo")
+@Html.ActionLink("Cricar Jogo", "Editar", "Jogo")
 @if (Model == null)
 {
     <h2>Nenhum Jogo Encontrado</h2>
