--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
@@ -3,13 +3,26 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar</h2>
+<h4>
+    @TempData["Mensagem"]
+</h4>
+
+
 @using (Html.BeginForm("Salvar", "Jogo", FormMethod.Post))
 {
     @Html.AntiForgeryToken();
     @Html.ValidationSummary(false);
 
-    @Html.HiddenFor(m => m.ID)
+    if (Model == null || Model.ID == 0)
+    {
+        <h2>Cadastro de Cliente</h2>
+    }
+    else
+    {
+        <h2>Edição de Cliente</h2>
+        @Html.HiddenFor(m => m.ID)
+    }
+
 
     <div class="form-group">
         @Html.LabelFor(m => m.Nome, new { @class = "col-sm-2 control-label" })
@@ -47,6 +60,7 @@
         @Html.LabelFor(m => m.Descricao, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
             @Html.TextBoxFor(m => m.Descricao, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Descricao)
         </div>
     </div>
 
