--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -19,4 +19,4 @@
         <td>@Model.Descricao</td>
     </tr>
 </table>
-<img src=Model.Imagem />
+<img src=@Model.Imagem style=" width: 300px; height: 250px" />
