Correção de Títulos

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
@@ -15,11 +15,11 @@
 
     if (Model == null || Model.ID == 0)
     {
-        <h2>Cadastro de Cliente</h2>
+        <h2>Cadastro de Jogo</h2>
     }
     else
     {
-        <h2>Edição de Cliente</h2>
+        <h2>Edição de Jogo</h2>
         @Html.HiddenFor(m => m.ID)
     }
 
