Feat -> Jogos especificos possuem comentários do facebook.

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -19,4 +19,9 @@
         <td>@Model.Descricao</td>
     </tr>
 </table>
-<img src=@Model.Imagem style=" width: 300px; height: 250px" />
+<div>
+    <img src=@Model.Imagem style=" width: 300px; height: 250px" />
+</div>
+
+
+<div class="fb-comments" data-href="http://localhost:56771/Jogo/Detalhes/@Model.ID"  data-width="400" data-numposts="6"></div>
