--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
@@ -6,8 +6,7 @@
 <h2>
     @TempData["Mensagem"]
 </h2>
-
-@Html.ActionLink("Cricar Jogo", "Editar", "Jogo")
+<input type="button" value="Criar Jogo" class=" btn btn-primary btn-md pull-right" onclick="location.href='@Url.Action("Editar","Jogo")'" />
 @if (Model == null)
 {
     <h2>Nenhum Jogo Encontrado</h2>
@@ -15,7 +14,7 @@
 else
 {
     <h2>Jogos disponíveis para locação</h2>
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-striped table-bordered table-hover table-responsive">
     <thead>
         <tr>
             <th style="width: 30%">Jogo</th>            
