--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Index.cshtml
@@ -3,12 +3,18 @@
 }
 <header>
     <h2 class="text-center">Locadora CWI Crescer</h2>
-    <form action="@Url.Action("JogosDisponiveis", "Jogo")" method="get">
+ </header>
+<div>
+    <form class="text-center" action="@Url.Action("JogosDisponiveis", "Jogo")" method="get">
         <label for="nome">Pesquisa por nome: </label>
         <input type="text" name="nome" value="" />
-
-        <input type="submit" value="Pesquisar" />
+        <button type="submit" class="btn btn-primary btn-md ">Pesquisar</button>
     </form>
- </header>
-<img style="margin:0 auto " class="img-responsive" src="@Url.Content("~/Content/img/Chars.png")" />
+    <div class="text-center" style="margin-left:540px; margin-top:-34px;">
+        <input type="button" value="Todos Jogos" class=" btn btn-primary btn-md " style="margin-left:-30px;" onclick="location.href='@Url.Action("JogosDisponiveis","Jogo")'" />
+    </div>
+  </div>
+   
+
+<img style="margin:0 auto; margin-top:10px;" class="img-responsive" src="@Url.Content("~/Content/img/Chars.png")" />
 <h2 class="text-center textcolor">SenuN Games</h2>
