--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Locadora.Web.MVC.Models.Login.LoginModel
 @{
     ViewBag.Title = "Index";
 }
@@ -7,13 +7,22 @@
 
 @using (Html.BeginForm("LoginUsuario", "Login", FormMethod.Post, new { @class = "form" }))
 {
+    @Html.ValidationSummary(true);
+
     <div class="form-group">
-        <label for="email">Nome:</label>
-        <input type="text" class="form-control" name="usuario" value="" />
+        @Html.LabelFor(p => p.Email, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Email)
+        </div>
     </div>
+
     <div class="form-group">
-        <label for="senha">Senha:</label>
-        <input type="password" class="form-control" name="senha" value="" />
+        @Html.LabelFor(m => m.Senha, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.PasswordFor(p => p.Senha, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Senha)
+        </div>
     </div>
 
     <input type="submit" name="enviar" value="Login" />
