Refactoring em andamento

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("LoginUsuario", "Login", FormMethod.Post, new { @class = "form" }))
 {
     @Html.ValidationSummary(true);
-
+    @Html.AntiForgeryToken();
     <div class="form-group">
         @Html.LabelFor(p => p.Email, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
