--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
@@ -23,6 +23,7 @@ else
             <th style="width: 30%">Jogo</th>            
             <th style="width: 25%">Categoria</th>
             <th style="width: 25%">Descricao</th>
+            <th style="width: 30%">Locar Jogo</th>
             @if (User.IsInRole("ADMIN"))
             {
                 <th style="width: 25%">Editar</th>
@@ -37,6 +38,7 @@ else
             <td>@item.Nome </td>
             <td>@item.Categoria</td>
             <td>@Html.ActionLink("Descricao jogo", "Detalhes", "Jogo", new { id = item.ID }, null)</td>
+            <td>@Html.ActionLink("Locar", "LocarPartial", "Locacao", new { id = item.ID},null)</td>
              @if (User.IsInRole("ADMIN"))
              {
                 <td>@Html.ActionLink("Editar", "Editar", "Jogo", new { id = item.ID }, null)</td>
