Finalizada base Locacao

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
@@ -4,7 +4,7 @@
 
 <div style="margin-top:30px;">
     <div class="pull-left">
-        <img src="~/Content/img/molejo.jpg" style=" width: 400px; height: 350px" />
+        <img src=@Model.Imagem style=" width: 400px; height: 350px" />
     </div>
     <div style="display:inline;">
         <p>Nome do Jogo: @Model.Nome</p>
