--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/Locar.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/Locar.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewBag.Title = "Locar";
 }
-
+<h3 style="color:red">
+    @TempData["Mensagem"]
+</h3>
 @Html.Action("LocarPartial","Locacao",new { id = Model.IDJogo})
 
 <form action="@Url.Action("SalvarLocacao", "Locacao")" method="post">
