--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Index.cshtml
@@ -7,14 +7,24 @@
 <div>
     <form class="text-center" action="@Url.Action("JogosDisponiveis", "Jogo")" method="get">
         <label for="nome">Pesquisa por nome: </label>
-        <input type="text" name="nome" value="" />
+        <input type="text" id="Nome" name="nome" value="" />
         <button type="submit" class="btn btn-primary btn-md ">Pesquisar</button>
     </form>
     <div class="text-center" style="margin-left:540px; margin-top:-34px;">
-        <input type="button" value="Todos Jogos" class=" btn btn-primary btn-md " style="margin-left:-30px;" onclick="location.href='@Url.Action("JogosDisponiveis","Jogo")'" />
+        <input id="btnEnviar" type="button" value="Todos Jogos" class=" btn btn-primary btn-md " style="margin-left:-30px;" onclick="location.href='@Url.Action("JogosDisponiveis","Jogo")'" />
     </div>
   </div>
    
 
 <img style="margin:0 auto; margin-top:10px;" class="img-responsive" src="@Url.Content("~/Content/img/Chars.png")" />
 <h2 class="text-center textcolor">SenuN Games</h2>
+@section Scripts {
+    <script>
+        $("document").ready(function() {
+            $("#Nome").autocomplete({
+              source: '@Url.Action("JogoAutocomplete", "Jogo")',
+                select: function () { $("#btnEnviar").click(); }
+            });
+        });
+    </script>
+}
