Corrigido bug de editar jogo, retirado codigo não utilizado

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Editar.cshtml
@@ -21,6 +21,8 @@
     {
         <h2>Edição de Jogo</h2>
         @Html.HiddenFor(m => m.ID)
+        @Html.HiddenFor(m => m.IDCliente)
+        @Html.HiddenFor(m => m.Data);
     }
 
 
