--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
@@ -2,11 +2,11 @@
 
 <h2 class="text-center">Locar Jogo</h2>
 
-<div style="margin-top:30px;">
-    <div class="pull-left">
+<div class="row" style="margin-top:30px;">
+    <div class="col-md-4">
         <img src=@Model.Imagem style=" width: 400px; height: 350px" />
     </div>
-    <div style="display:inline;">
+    <div class="col-md-3" style="margin-left:40px; padding-top:20px; font-size:medium;">
         <p>Nome do Jogo: @Model.Nome</p>
         <p>Preco @Model.Preco</p>
         <p>Previsao de entrega: @Model.DataEntrega</p>
