--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Locacao/LocarPartial.cshtml
@@ -6,7 +6,7 @@
     <div class="col-md-4">
         <img src=@Model.Imagem style=" width: 400px; height: 350px" />
     </div>
-    <div class="col-md-3" style="margin-left:40px; padding-top:20px; font-size:medium;">
+    <div class="col-md-3" style="margin-left:40px; padding-top:20px; font-size:medium; border: ridge">
         <p>Nome do Jogo: @Model.Nome</p>
         <p>Preco @Model.Preco</p>
         <p>Previsao de entrega: @Model.DataEntrega</p>
