--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -19,7 +19,7 @@
     </tr>
 </table>
 <div>
-    <img src=@Model.Imagem style=" width: 300px; height: 250px" />
+    <img class="table-bordered" src=@Model.Imagem style=" width: 400px; height: 350px" />
 </div>
 
 
