--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Jogo/JogosDisponiveis.cshtml
@@ -16,7 +16,7 @@
 }
 else
 {
-    <h2>Jogos disponíveis para locação</h2>
+    <h2>Jogos disponíveis</h2>
 <table class="table table-striped table-bordered table-hover table-responsive">
     <thead>
         <tr>
