--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/Login/Index.cshtml
@@ -4,26 +4,27 @@
 }
 
 <h2>Index</h2>
-
-@using (Html.BeginForm("LoginUsuario", "Login", FormMethod.Post, new { @class = "form" }))
-{
-    @Html.ValidationSummary(true);
-    @Html.AntiForgeryToken();
-    <div class="form-group">
-        @Html.LabelFor(p => p.Email, new { @class = "col-sm-2 control-label" })
-        <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email)
+<div>
+    @using (Html.BeginForm("LoginUsuario", "Login", FormMethod.Post, new { @class = "form" }))
+    {
+        @Html.ValidationSummary(true);
+        @Html.AntiForgeryToken();
+        <div class="form-group">
+            @Html.LabelFor(p => p.Email, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email)
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Senha, new { @class = "col-sm-2 control-label" })
-        <div class="col-sm-10">
-            @Html.PasswordFor(p => p.Senha, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Senha)
+        <div class="form-group">
+            @Html.LabelFor(m => m.Senha, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.PasswordFor(p => p.Senha, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Senha)
+            </div>
         </div>
-    </div>
 
-    <input type="submit" name="enviar" value="Login" />
-}
+        <input class="btn btn-primary btn-md" style="margin-left: 25px; margin-top:10px;" type="submit" name="enviar" value="Login" />
+    }
+</div>
