--- a/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/cadastro/clienteCadastro.html
+++ b/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/cadastro/clienteCadastro.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<section layout:fragment="content" class="box texto">
-	<h2>Nome do Cliente</h2>
+	<h2>Preencha o campo</h2>
 	<p th:text="${Mensagem}"></p>
 	
 		<form name="form" th:action="@{'/pedido/cadastro/clientecadastro'}" method="POST">
-			<input type="text" id="nomeCliente" name="nomeCliente" placeholder="Nome cliente" />
+			<input type="text" id="cpf" name="cpf" placeholder="CPF" />
 			<input type="submit" id="pesquisar" value="Pesquisar" />
-			</form>
+		</form>
 	</section>
 </body>
 </html>
