--- a/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/cadastro/servicoCadastro.html
+++ b/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/cadastro/servicoCadastro.html
@@ -10,17 +10,42 @@
 <body>
 	<section layout:fragment="content" class="box texto">
 	 <h2>Escolha o servico</h2>
-		<form name="form"  th:action="@{'/pedido/cadastro/servicoCadastro'}" th:object="${pedidos}" method="POST">
-		<input th:field="*{idCliente}" type="hidden" />
-		<input th:field="*{idMaterial}" type="hidden" />
+		<form th:action="@{'/pedido/cadastro/servicocadastro'}" th:object="${pedidos}" method="post">
+		<input th:field="*{idPedido}" type="hidden" />
 			<p class="form-group">
 		 		<label class="col-sm-2 control-label">Serviço: </label>
 		 		<select th:field="*{idServico}">
 	                <option th:each="s : ${servicos}" th:text="${s.descricao}" th:value="${s.idServico}" ></option>
 	            </select>
             </p>
+            <p>
+            	<label class="col-sm-2 control-label">Peso </label>
+            	<input th:field="*{peso}" type="text"/>
+            </p>
             <input type="submit" id="pesquisar" value="Pesquisar" />
 		</form>
+			<table
+				class="table table-striped table-bordered table-hover table-responsive table-condensed ">
+				<thead>
+					<tr>
+						<th style="width: 10%">Material</th>
+						<th style="width: 10%">Servico</th>
+						<th style="width: 10%">Valor</th>
+						<th style="width: 10%">Prazo</th>
+						<th style="width: 10%">Situacao</th>
+						<th style="width: 10%">Incluir</th>
+					</tr>
+				</thead>
+				<tr th:each="produto : ${pedidos.produtosVinculadosAServico}">
+					<td th:text="${produto.descricaoMaterial}"></td>
+					<td th:text="${produto.descricaoServico}"></td>
+					<td th:text="${produto.valor}"></td>
+					<td th:text="${produto.prazo}"></td>
+					<td th:text="${produto.situacao}"></td>
+					<td><a th:href="${ '/pedido/cadastro/itemcadastro/' + pedidos.idPedido + '/' 
+						+ produto.idProduto + '/' + pedidos.peso}">Incluir</a></td>
+				</tr>
+			</table>
 	</section>
 </body>
 </html>
