--- a/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/pedidos.html
+++ b/src/modulo-05-Java/lavanderia/src/main/resources/templates/Pedido/pedidos.html
@@ -21,6 +21,7 @@
 						<th style="width: 10%">Situacao</th>
 						<th style="width: 10%">Incluir Item</th>
 						<th style="width: 10%">Itens</th>
+						<th style="width: 10%">Alterar para</th>
 					</tr>
 				</thead>
 				<tr th:each="pedido : ${pedidos.pedidosVInculados}">
@@ -31,6 +32,7 @@
 					<td th:text="${pedido.situacao}"></td>
 					<td><a th:href="${ '/pedido/cadastro/itemcadastro/' + pedido.idPedido}">Incluir</a></td>
 					<td><a th:href="${ '/pedido/itens/' + pedido.idPedido}">Visualizar</a></td>
+					<td><a th:href="${ '/pedido/clientepedidos/processando/' + pedido.idPedido}">Processando</a></td>
 				</tr>
 			</table>
 	</section>
